--- a/MenekuljMAUI/View/GamePage.xaml
+++ b/MenekuljMAUI/View/GamePage.xaml
@@ -3,89 +3,14 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="MenekuljMAUI.View.GamePage"
              Title="GamePage">
-    <ScrollView>
-        <VerticalStackLayout
-          Spacing="25"
-          Padding="30,0"
-          VerticalOptions="Center">
-
-            <!--<Image
-              Source="dotnet_bot.png"
-              SemanticProperties.Description="Cute dot net bot waving hi to you!"
-              HeightRequest="200"
-              HorizontalOptions="Center" />
-
-          <Label
-              Text="Hello, World!"
-              SemanticProperties.HeadingLevel="Level1"
-              FontSize="32"
-              HorizontalOptions="Center" />
-
-          <Label
-              Text="Welcome to .NET Multi-platform App UI"
-              SemanticProperties.HeadingLevel="Level2"
-              SemanticProperties.Description="Welcome to dot net Multi platform App U I"
-              FontSize="18"
-              HorizontalOptions="Center" />
-
-          <Button
-              x:Name="CounterBtn"
-              Text="Click me"
-              SemanticProperties.Hint="Counts the number of times you click"
-              Clicked="OnCounterClicked"
-              HorizontalOptions="Center" />-->
-            <Grid>
-                <Grid.RowDefinitions>
-                    <RowDefinition Height="80"></RowDefinition>
-                    <RowDefinition Height="10*"></RowDefinition>
-                </Grid.RowDefinitions>
-
-            </Grid>
-
-
-            <!--<CollectionView ItemsSource="{Binding ViewModelCells}" Grid.Row="1">
-
-              <CollectionView.ItemsLayout>
-                  <GridItemsLayout Orientation="Vertical" Span="{Binding MatrixSize}" />
-                  
-                  
-              </CollectionView.ItemsLayout>
-              
-              
-              <CollectionView.ItemTemplate>
-
-                  <DataTemplate>
-
-                          <Button Text="1" >
-
-                          <Button.Style>
-                              <Style TargetType="Button" >
-                                  <Style.Triggers>
-                                      <DataTrigger TargetType="Button" Binding="{Binding CellType}" Value="0">
-                                          <Setter Property="Background" Value="LightGray">
-                                          </Setter>
-                                      </DataTrigger>
-                                      <DataTrigger TargetType="Button"  Binding="{Binding CellType}" Value="1">
-                                          <Setter Property="Background" Value="Green"/>
-                                      </DataTrigger>
-                                      <DataTrigger TargetType="Button" Binding="{Binding CellType}" Value="2">
-                                          <Setter Property="Background" Value="Red"/>
-                                      </DataTrigger>
-                                      <DataTrigger TargetType="Button"  Binding="{Binding CellType}" Value="3">
-                                          <Setter Property="Background" Value="Black"/>
-                                      </DataTrigger>
-                                      </Style.Triggers>
-
-                              </Style>
-                          </Button.Style>
-                              
-                          </Button>
-
-                      
-                  </DataTemplate>
-
-              </CollectionView.ItemTemplate>
-          </CollectionView>-->
+    <FlexLayout AlignContent="Stretch">
+      
+        
+        <Grid>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="80"></RowDefinition>
+                <RowDefinition Height="10*"></RowDefinition>
+            </Grid.RowDefinitions>
 
 
             <Grid
@@ -102,7 +27,7 @@
                         <Button
               Grid.Row="{Binding Row}"
               Grid.Column="{Binding Col}"
-                Text="{Binding CellType}"
+           
               IsEnabled="False"
               Padding="0"
               FontAttributes="Bold"
@@ -124,7 +49,7 @@
                                             <Setter Property="Background" Value="Red"/>
                                         </DataTrigger>
                                         <DataTrigger TargetType="Button"  Binding="{Binding CellType}" Value="3">
-                                            <Setter Property="Background" Value="Black"/>
+                                            <Setter Property="Background" Value="#3a3a3b"/>
                                         </DataTrigger>
                                     </Style.Triggers>
                                 </Style>
@@ -134,16 +59,10 @@
                     </DataTemplate>
                 </BindableLayout.ItemTemplate>
             </Grid>
+        </Grid>
 
 
-        </VerticalStackLayout>
-
-
-
-
-    </ScrollView>
-
-
+    </FlexLayout>
 
 
 
