--- a/MenekuljMAUI/AppShell.xaml
+++ b/MenekuljMAUI/AppShell.xaml
@@ -9,7 +9,7 @@
 
     <ShellContent
         Title="Home"
-        ContentTemplate="{DataTemplate view:GamePage}"
+        ContentTemplate="{DataTemplate view:MenuPage}"
         Route="GamePage" >
 
     </ShellContent>
